--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,22 +6,5 @@ jobs: #This is where we specify what we want to do
   steps:
    - name: Checkout Repo
      uses: actions/checkout@v3 #action versions
-   - name: Setup Python
-     uses: actions/setup-python@v4
-     with:
-      python-version: '3.10'
-   - name: Install Dependencies 
-     run: |
-      python -m pip install --upgrade pip
-      pip install pyyaml
    - name: Run Feed Generator
-     run: python feed.py
-   - name: Push Repo
-     run: |
-      git config user.name github-actions
-      git config user.email github-actions@github.com
-      git add .
-      git commit -m "Modified Feed"
-      git push
-
-    
+     uses : LinaAitIder/podcast-generator@main
